@@ -35,8 +35,9 @@ terms.inner <- function(x) {
     else if (class(x)== "call" && 
              (x[[1]] != as.name("$") && x[[1]] != as.name("["))) {
         if (x[[1]] == '+' || x[[1]]== '*' || x[[1]] == '-') {
-            # terms in a model equation
-            c(terms.inner(x[[2]]), terms.inner(x[[3]]))
+            # terms in a model equation, unary minus only has one argument
+            if (length(x)==3) c(terms.inner(x[[2]]), terms.inner(x[[3]]))
+            else terms.inner(x[[2]])
         }
         else if (x[[1]] == as.name("Surv"))
                  unlist(lapply(x[-1], terms.inner))
